trying a fix for imgs on safari mobile

--- a/css/singleProject.css
+++ b/css/singleProject.css
@@ -24,7 +24,7 @@ body {
 }
 .singleProject_img {
   width: 100%;
-  height: auto;
+  height: auto !important;
   margin-top: 20px;
 }
 .singleProject_imgFlex {
